src/objects/Revisions__c.object
<CustomObject>
    <fields>
        <fullName>Gantt_Data__c</fullName>
        <label>Gantt Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Revisions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision_Name__c</fullName>
        <label>Revision Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Id__c</fullName>
        <label>SObject Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of Gantt Chart</description>
        <label>Version</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RV-{000000}</displayFormat>
        <label>Revision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>